# mikrotik-tools

./: .coveragerc  .gitignore  README.md  build.ps1  test.ps1
.github/workflows/: test.yml
rsc/: README.md
src/mtctl/: README.md  pyproject.toml
src/mtctl/mtctl/: __init__.py  backup.py  cli.py  deployer.py  export.py  importer.py  remove.py  safemode_shell.py  sftp.py  ssh.py
src/mtctl/tests/: test_backup.py  test_cli.py  test_config.py  test_deployer.py  test_export.py  test_importer.py  test_remove.py  test_safemode_shell.py  test_sftp.py  test_ssh.py
src/rsc/: README.md  pyproject.toml
src/rsc-bundle/: README.md  build.ps1  pyproject.toml
src/rsc-bundle/rsc_bundle/: __init__.py  bundler.py  cli.py  compact.py  flatten.py  loader.py  unfold.py
src/rsc-bundle/tests/: test_bundle.py  test_compact.py  test_loader.py
src/rsc-bundle/tests/fixtures/nested/: c.rsc
src/rsc-bundle/tests/fixtures/profile/: 50-services.rsc  vars.rsc
src/rsc-ctl/: README.md  pyproject.toml
src/rsc-ctl/rsc_ctl/: __init__.py  backup.py  cli.py  deployer.py  sftp.py  ssh.py
src/rsc-ctl/tests/: test_backup.py  test_cli.py  test_config.py  test_deployer.py  test_sftp.py  test_ssh.py
src/rsc-deploy/: README.md
src/rsc-deploy/rsc_deploy/: __init__.py  cli.py  deployer.py  sftp.py  ssh.py
src/rsc-deploy/tests/: test_cli.py  test_config.py  test_deployer.py  test_sftp.py  test_ssh.py
src/rsc-diff/: README.md  build.ps1  pyproject.toml
src/rsc-diff/rsc_diff/: __init__.py  cli.py  defaults.py  differ.py  emitter.py  model.py  parser.py  verify.py
src/rsc-diff/tests/: test_cli.py  test_roundtrip.py
src/rsc-parser/: README.md  pyproject.toml
src/rsc-parser/rsc_parser/: __init__.py  identity.py  menus.py  model.py  parser.py
src/rsc-parser/tests/: test_parser.py
src/rsc-parser/tests/fixtures/: minimal.rsc
src/rsc/rsc/: __init__.py  __main__.py  cli.py  lint.py  lint_cli.py
src/rsc/rsc/bundle/: __init__.py  bundler.py  cli.py  compact.py  flatten.py  loader.py  resolver.py
src/rsc/rsc/diff/: __init__.py  cli.py  defaults.py  differ.py  emitter.py  model.py  props.py  verify.py
src/rsc/rsc/parser/: __init__.py  identity.py  menus.py  model.py  parser.py
src/rsc/rsc/schema/: __init__.py  _common.json  _root.json  cli.py  menu_disk.json  menu_generic.json  menu_interface.json  menu_ip.json  menu_ipv6.json  menu_system.json  menu_tool.json  menu_user.json
src/rsc/rsc/yaml/: __init__.py  converter.py  reverse.py  reverse_cli.py  validate.py
src/rsc/tests/: test_dispatcher.py  test_lint.py  test_lint_cli.py  test_schema.py
src/rsc/tests/bundle/: test_bundle.py  test_cli.py  test_compact.py  test_loader.py  test_unfold.py
src/rsc/tests/bundle/fixtures/: secrets.rsc
src/rsc/tests/bundle/fixtures/cycle/: a.rsc
src/rsc/tests/bundle/fixtures/profile/: 10-interfaces.rsc  60-system.rsc
src/rsc/tests/bundle/fixtures/simple/: entry.rsc
src/rsc/tests/bundle/fixtures/yaml-profile/: 10-interfaces.yaml  50-services.yaml  60-system.yaml
src/rsc/tests/bundle/fixtures/yaml-vars/: secrets.yaml  vars.yaml
src/rsc/tests/diff/: test_cli.py  test_roundtrip.py
src/rsc/tests/parser/: test_parser.py
src/rsc/tests/yaml_subpkg/: test_converter.py  test_reverse.py  test_validate.py
tools/rsc-bundle/: README.md  ROADMAP.md  pyproject.toml
tools/rsc-bundle/rsc_bundle/: __init__.py  bundler.py  cli.py  resolver.py
tools/rsc-bundle/tests/: test_unfold.py
tools/rsc-bundle/tests/fixtures/cycle/: b.rsc
tools/rsc-bundle/tests/fixtures/nested/: a.rsc  b.rsc
tools/rsc-bundle/tests/fixtures/simple/: inner.rsc
tools/rsc-deploy/: README.md  pyproject.toml
tools/rsc-deploy/rsc_deploy/: __init__.py  config.py
tools/rsc-diff/: README.md  pyproject.toml
tools/rsc-diff/rsc_diff/: __init__.py  cli.py  defaults.py  differ.py  emitter.py  model.py  parser.py  verify.py
tools/rsc-diff/tests/: test_roundtrip.py
tools/rsc-diff/tests/fixtures/: minimal_a.rsc  minimal_b.rsc
