[project]
name = "rsc-bundle"
version = "0.1.0"
description = "Inline RouterOS .rsc /import directives into one file"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rsc-bundle contributors" }]
keywords = ["routeros", "mikrotik", "iac", "bundle", "config"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    # Local sibling package; install editable from `tools/src/rsc-parser`
    # before installing this package. See README.md / build.ps1.
    "rsc-parser>=0.2.0",
]

[tool.uv.sources]
# Resolve the rsc-parser dependency from the sibling source tree rather
# than PyPI. `editable=true` so changes in rsc-parser show up here without
# a reinstall.
rsc-parser = { path = "../rsc-parser", editable = true }

[dependency-groups]
# Installed by `uv sync` (default group). Excluded from a `--no-dev` build.
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5",
]

[tool.coverage.run]
# Per-tool measurement scope. The actual data file path is set per-run
# via the COVERAGE_FILE env var in tools/test.ps1 (so each tool writes
# a unique file under tools/.coverage-data/, ready for `coverage combine`).
source = ["rsc_bundle"]
branch = true

[project.scripts]
rsc-bundle = "rsc_bundle.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rsc_bundle*"]

[tool.setuptools.package-data]
rsc_bundle = ["py.typed"]
