[project]
name = "rsc-parser"
version = "0.2.0"
description = "Shared parser + identity model for RouterOS .rsc tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rsc-parser contributors" }]
keywords = ["routeros", "mikrotik", "iac", "parser", "config"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = []

[dependency-groups]
# Installed by `uv sync` (default group). Excluded from a `--no-dev` build.
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5",
]

[tool.coverage.run]
# Per-tool measurement scope. The actual data file path is set per-run
# via the COVERAGE_FILE env var in tools/test.ps1 (so each tool writes
# a unique file under tools/.coverage-data/, ready for `coverage combine`).
source = ["rsc_parser"]
branch = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rsc_parser*"]

[tool.setuptools.package-data]
rsc_parser = ["py.typed"]
