[project]
name = "rsc"
version = "0.1.0"
description = "RouterOS .rsc script processing: parser library + bundle / diff subcommands"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rsc contributors" }]
keywords = ["routeros", "mikrotik", "iac", "bundle", "diff", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
# Runtime deps:
#   pyyaml     -- `rsc.yaml` parses YAML profile sources for `rsc bundle --yaml`.
#   jsonschema -- `rsc.yaml.validate` checks YAML against the JSON Schema
#                 bundled inside `rsc.schema` (in-memory) for the optional
#                 `rsc bundle --yaml --validate` opt-in.
# Parser + diff still have zero deps.
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[dependency-groups]
# Installed by `uv sync` (default group). Excluded from a `--no-dev` build.
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5",
]

[tool.coverage.run]
# Per-tool measurement scope. The actual data file path is set per-run
# via the COVERAGE_FILE env var in tools/test.ps1 (so each tool writes
# a unique file under tools/.coverage-data/, ready for `coverage combine`).
source = ["rsc"]
branch = true

[project.scripts]
rsc = "rsc.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rsc*"]

[tool.setuptools.package-data]
rsc = ["py.typed"]
"rsc.parser" = ["py.typed"]
"rsc.bundle" = ["py.typed"]
"rsc.diff" = ["py.typed"]
"rsc.yaml" = ["py.typed"]
"rsc.schema" = ["*.json"]
