[project]
name = "rsc-deploy"
version = "0.1.0"
description = "Upload RouterOS .rsc files over SSH/SFTP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rsc-deploy contributors" }]
keywords = ["routeros", "mikrotik", "iac", "deploy", "ssh", "sftp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "paramiko>=3.4",
]

[project.scripts]
rsc-deploy = "rsc_deploy.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rsc_deploy*"]

[tool.setuptools.package-data]
rsc_deploy = ["py.typed"]
