[project]
name = "rsc-diff"
version = "0.1.0"
description = "Lightweight RouterOS .rsc config diff -> ops"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rsc-diff contributors" }]
keywords = ["routeros", "mikrotik", "iac", "diff", "config"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
rsc-diff = "rsc_diff.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rsc_diff*"]

[tool.setuptools.package-data]
rsc_diff = ["py.typed"]
